--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -8,8 +8,8 @@
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.DashboardActivity">
 
+
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-20dp"
@@ -17,9 +17,8 @@
         app:cardCornerRadius="15dp">
 
         <RelativeLayout
-            android:id="@+id/layoutMainHeader"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_90sdp">
+            android:layout_height="@dimen/_229sdp">
 
             <View
                 android:layout_width="match_parent"
@@ -196,6 +195,7 @@
         android:layout_below="@+id/cvHeader"
         android:layout_marginLeft="@dimen/_11sdp"
         android:layout_marginTop="@dimen/_14sdp"
+        android:visibility="gone"
         android:layout_marginRight="@dimen/_11sdp"
         android:layout_marginBottom="@dimen/_12sdp"
         app:cardCornerRadius="@dimen/_10sdp">
@@ -266,7 +266,6 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:id="@+id/layoutMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
