--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -103,45 +103,40 @@
             android:id="@+id/flashBtnLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_450sdp"
             android:visibility="visible">
 
-            <LinearLayout
-                android:id="@+id/iconsLL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="560sp"
-                android:orientation="horizontal"
-                android:paddingEnd="@dimen/_20sdp">
-
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/toglebtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_50sdp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="@dimen/_38sdp"
+                    android:layout_height="@dimen/_38sdp"
+                    android:layout_marginStart="@dimen/_40sdp"
                     android:src="@drawable/ic_flashicon"
                     android:text="Flash ON" />
 
                 <ImageView
                     android:id="@+id/album"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="@dimen/_38sdp"
+                    android:layout_height="@dimen/_38sdp"
+                    android:layout_marginRight="@dimen/_18sdp"
+                    android:src="@drawable/ic_group_albumicon" />
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_100sdp"
-                    android:padding="@dimen/_5sdp"
-                    android:src="@drawable/ic_group_albumicon" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/iconsLL"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="@dimen/_35sdp"
                     android:fontFamily="@font/opensans_regular"
-                    android:gravity="center"
-                    android:layout_weight="1"
                     android:text="Flashlight"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp"
@@ -149,19 +144,18 @@
                     />
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_alignParentRight="true"
                     android:fontFamily="@font/opensans_regular"
-                    android:gravity="center"
                     android:text="Album"
+                    android:layout_marginRight="@dimen/_35ssp"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp"
 
                     />
 
-
-            </LinearLayout>
+                </RelativeLayout>
 
         </RelativeLayout>
 
