--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -123,13 +123,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
-                        android:paddingBottom="@dimen/_3sdp"
+                        android:paddingBottom="@dimen/_5sdp"
                         android:visibility="visible">
 
                         <View
                             android:id="@+id/strengthOne"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
+                            android:layout_height="@dimen/_2sdp"
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
@@ -138,7 +138,7 @@
                         <View
                             android:id="@+id/strengthTwo"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
+                            android:layout_height="@dimen/_2sdp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
                             android:background="@color/error_red"
@@ -147,7 +147,7 @@
                         <View
                             android:id="@+id/strengthThree"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
+                            android:layout_height="@dimen/_2sdp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
                             android:background="@color/error_red"
