--- a/app/src/main/res/layout/activity_edit_email.xml
+++ b/app/src/main/res/layout/activity_edit_email.xml
@@ -65,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:clickable="false"
                     android:cursorVisible="false"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                     android:editable="false"
                     android:focusable="false"
                     android:fontFamily="@font/opensans_semibold"
@@ -125,7 +125,7 @@
                     android:id="@+id/newEmailET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="New Email"
                     android:imeOptions="actionDone"
