--- a/app/src/main/res/layout/activity_account_limits.xml
+++ b/app/src/main/res/layout/activity_account_limits.xml
@@ -44,13 +44,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/_40sdp"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -294,7 +293,8 @@
                 android:layout_marginTop="@dimen/_11sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
                 app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="@dimen/_10sdp">
+                app:cardCornerRadius="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_2sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -399,12 +399,6 @@
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="40dp" />
-
 
         </LinearLayout>
     </ScrollView>
