--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -192,7 +192,7 @@
                         android:id="@+id/emailET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Email"
                         android:imeOptions="actionNext"
@@ -317,7 +317,7 @@
                         <View
                             android:id="@+id/stregnthOne"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
+                            android:layout_height="@dimen/_2sdp"
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
@@ -326,7 +326,7 @@
                         <View
                             android:id="@+id/stregnthTwo"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
+                            android:layout_height="@dimen/_2sdp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
                             android:background="@color/error_red"
@@ -335,7 +335,7 @@
                         <View
                             android:id="@+id/stregnthThree"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
+                            android:layout_height="@dimen/_2sdp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
                             android:background="@color/error_red"
