--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -97,7 +97,7 @@
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:textSize="@dimen/_12ssp"
                     android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                     android:singleLine="true"
                     android:maxLines="1"
                     />
