--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
-        android:paddingBottom="@dimen/_12sdp">
+        android:paddingBottom="@dimen/_11sdp">
 
         <LinearLayout
             android:id="@+id/preferencesCloseLL"
@@ -33,7 +33,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_14sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="Preferences"
             android:textColor="@color/primary_black"
@@ -97,8 +96,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:inputType="text"
                         android:padding="@dimen/_12sdp"
-                        android:text=""
-                        android:textColor="@color/xdark_gray"
+                        android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
